# NovaRL

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
algos/: __init__.py
algos/grpo/: __init__.py  trainer.py
algos/ppo/: __init__.py  trainer.py
configs/: train.yaml
configs/deepspeed/: zero2.json  zero3.json
core/: __init__.py  interfaces.py  types.py
core/buffers/: __init__.py  data_queue.py  memory.py
core/distributed/: __init__.py  deepspeed.py  fsdp.py  megatron.py  moe.py
core/models/: __init__.py  hf_policy.py
core/monitoring/: __init__.py  eval_tasks.py  manager.py  traces.py
core/utils/: __init__.py  advantages.py  checkpoint.py  logging.py  stats.py  timing.py
docs/: README.md  choose_your_backend.md  moe_demo.md
engines/: __init__.py  vllm_engine.py
engines/sync/: __init__.py  sync_engine.py
envs/: __init__.py  base.py  vision_prompt_env.py
envs/prompt/: __init__.py  single_turn.py  toy.py  verifiable.py
examples/: __init__.py  export_policy_to_hf.py  minimal_ppo_sync.py  moe_demo.py  ppo_async.py  ppo_rlhf_single_turn.py  ppo_vlm_vqa.py  rl_code.py  rlvr_math.py  rollout_vllm_text.py  vlm_wrappers.py
examples/recipes/: README.md  code_rl_multi_node.sh  code_rl_single_node.sh  (+7 more)
rewards/: __init__.py  base.py
scripts/: finetune_hf.py  launch_fsdp.sh  launch_zero3.sh  resume_async.py  train.py
tests/: __init__.py  test_advantages.py  test_core.py  test_distributed_presets.py  test_grpo.py  test_moe_layout.py  test_monitoring.py  test_rlvr.py  test_vllm_engine.py  test_weight_sync.py
(+8 files in other folders)
